--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "players@jwplayer.com"
   ],
-  main : [
+  "main" : [
 	  "./bin-release/jwplayer.js",
 	  "./bin-release/jwplayer.flash.swf"
   ],
